--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "url": "https://github.com/rebelmail/node-lambda-template/issues"
   },
   "homepage": "https://github.com/rebelmail/node-lambda-template",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
     "node-lambda": "0.8.8"
   },
   "scripts": {
