--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "homepage": "https://github.com/rebelmail/node-lambda-template",
   "dependencies": {
-    "node-lambda": "0.1.5"
+    "node-lambda": "^0.9.0"
   },
   "scripts": {
     "setup": "node-lambda setup",
