--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "homepage": "https://github.com/motdotla/node-lambda-template",
   "scripts": {
-    "setup": "node-lambda setup",
-    "test": "node-lambda run",
-    "package": "node-lambda package",
-    "deploy": "node-lambda deploy"
+    "setup": "./node_modules/.bin/node-lambda setup",
+    "test": "./node_modules/.bin/node-lambda run",
+    "package": "./node_modules/.bin/node-lambda package",
+    "deploy": "./node_modules/.bin/node-lambda deploy"
   },
   "devDependencies": {
     "node-lambda": "^0.9.0"
